tests/NormalTests/paczka1/small_fuzzy/56133484.err
Error in line 1: 3ySX A153 68,2
Error in line 8: tx8QtcR8b A153 19,9
Error in line 13: 98Xy A]53 3,7
Error in line 14: BSEnEbHoxI A443 84,3
Error in line 9: tx8QtcR8b A825 42,5
